--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -7,6 +7,7 @@
   width: 400px;
   background-color: greenyellow;
   border-radius: 2rem;
+  box-shadow: 8px 8px 12px darkgreen;
 }
 
 .button-handler {
@@ -22,10 +23,16 @@
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: rgb(95, 207, 95);
+  box-shadow: 3px 3px 0px darkgreen;
 }
 
 .gallery button:hover {
   background-color: rgb(80, 170, 80);
+}
+
+.gallery button:active {
+  transform: translate(3px, 3px);
+  box-shadow: 1px 1px 0px darkgreen;
 }
 
 /* .gallery button {
