--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -1,25 +1,25 @@
 .gallery {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  height: 450px;
-  width: 400px;
+  padding-top: 2.5rem;
+  height: 40rem;
+  width: 30rem;
   background-color: greenyellow;
   border-radius: 2rem;
   box-shadow: 8px 8px 12px darkgreen;
 }
 
 .button-handler {
-  /* padding: 4rem; */
   display: flex;
-  /* background-color: black; */
 }
 
 .gallery button {
   font-size: 24px;
   font-weight: bold;
-  margin: 1rem;
+  height: 8rem;
+  margin: 3rem 2rem;
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: rgb(95, 207, 95);
@@ -35,9 +35,16 @@
   box-shadow: 1px 1px 0px darkgreen;
 }
 
-/* .gallery button {
-  width: 5rem;
-  height: 3rem;
-  font-size: large;
-  border-radius: 0.5rem;
-} */
+@media screen and (max-width: 450px) {
+  .gallery {
+    height: 500px;
+    width: 350px;
+    margin: 1.5rem;
+  }
+
+  .gallery button {
+    height: 6rem;
+    margin: 1rem;
+    padding: 0.5rem;
+  }
+}
