connect <Wrapper> app.jsx

--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -7,7 +7,7 @@
   height: 40rem;
   width: 30rem;
   background-color: greenyellow;
-  border-radius: 2rem;
+  /* border-radius: 2rem; */
   box-shadow: 8px 8px 12px darkgreen;
 }
 
@@ -21,7 +21,7 @@
   height: 8rem;
   margin: 3rem 2rem;
   padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: inherit;
   background-color: rgb(95, 207, 95);
   box-shadow: 3px 3px 0px darkgreen;
 }
