--- a/src/components/GalleryItem.module.css
+++ b/src/components/GalleryItem.module.css
@@ -4,7 +4,7 @@
   object-fit: fill;
   background-color: forestgreen;
   border: 2px solid black;
-  border-radius: 2rem;
+  /* border-radius: 2rem; */
 }
 
 @media screen and (max-width: 450px) {
